<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.BottomSheet"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:id="@+id/forgot"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    android:background="#1B2427">
<ImageView
    android:layout_width="110sp"
    android:layout_height="110sp"
    android:gravity="center"
    android:layout_marginBottom="10sp"
    android:layout_gravity="center"
    android:src="@drawable/forgotpassword"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/don_t_worry_if_you_forgot_your_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="10sp"
    android:layout_gravity="center_horizontal"
    android:background="#e6e6e6"
    android:padding="10sp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/please_enter_your_registered_email_address_we_will_send_you_an_email_for_resetting_your_password" />
</androidx.cardview.widget.CardView>
<EditText
    android:id="@+id/recoveryEmail"
    android:layout_width="360dp"
android:foregroundGravity="center_vertical"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:padding="10dp"
    android:textAlignment="center"
    android:hint="@string/enter_your_email_here"
    android:background="@drawable/buttonround2"
    android:textStyle="bold"
    android:textSize="19sp"
    android:textColorHint="#555151"
    android:textColor="@android:color/black"



    />

    <Button
        android:id="@+id/forbtn"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#2C383C"
        android:text="@string/reset_password"

        android:textAlignment="center"
        android:layout_marginTop="10sp"

        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>

</LinearLayout>